--- a/flightplans.css
+++ b/flightplans.css
@@ -168,6 +168,7 @@ p {
     font-size: 1.2em;
     font-weight: bold;
     transition: all 0.3s ease-in-out;
+    text-align: center;
 }
 
 #flight-status p {
